Fixed typos and a little phrasing.
Mostly in German translation, some small fixes in English text, too.

--- a/src/pretix/presale/templates/pretixpresale/event/order.html
+++ b/src/pretix/presale/templates/pretixpresale/event/order.html
@@ -61,8 +61,7 @@
                 {% if can_download %}
                     <p>
                         {% blocktrans trimmed %}
-                            Please use the buttons below to obtain your ticket. Please have your ticket ready when
-                            entering the event.
+                            Please obtain your ticket below. Please have your ticket ready when entering the event.
                         {% endblocktrans %}
                     </p>
                     {% for b in download_buttons %}
