--- a/src/pretix/control/templates/pretixcontrol/item/index.html
+++ b/src/pretix/control/templates/pretixcontrol/item/index.html
@@ -23,6 +23,8 @@
             <legend>{% trans "Availability" %}</legend>
             {% bootstrap_field form.available_from layout="horizontal" %}
             {% bootstrap_field form.available_until layout="horizontal" %}
+            {% bootstrap_field form.require_voucher layout="horizontal" %}
+            {% bootstrap_field form.hide_without_voucher layout="horizontal" %}
         </fieldset>
         <div class="form-group submit-group">
             <button type="submit" class="btn btn-primary btn-save">
