Moved "powered by pretix" to a seperate template

--- a/src/pretix/presale/templates/pretixpresale/base.html
+++ b/src/pretix/presale/templates/pretixpresale/base.html
@@ -31,11 +31,7 @@
 <footer>
     {% block footer %}
     {% endblock %}
-    {% with "href='http://pretix.eu'" as a_attr %}
-        {% blocktrans trimmed %}
-            powered by <a {{ a_attr }}>pretix</a>
-        {% endblocktrans %}
-    {% endwith %}
+    {% include "pretixpresale/base_footer.html" %}
 </footer>
 <div id="ajaxerr">
 </div>
