Removed inline javascript URLs

--- a/src/pretix/presale/templates/pretixpresale/event/index.html
+++ b/src/pretix/presale/templates/pretixpresale/event/index.html
@@ -75,7 +75,7 @@
                                                         alt="{{ item.name }}"/>
                                             </a>
                                         {% endif %}
-                                        <a href="javascript:void(0);" data-toggle="variations">
+                                        <a href="#" data-toggle="variations">
                                             <strong>{{ item.name }}</strong>
                                         </a>
                                         {% if item.description %}<p>{{ item.description }}</p>{% endif %}
@@ -90,7 +90,7 @@
                                         {% endif %}
                                     </div>
                                     <div class="col-md-2 col-xs-6 availability-box">
-                                        <a href="javascript:void(0);" data-toggle="variations" class="js-only">
+                                        <a href="#" data-toggle="variations" class="js-only">
                                             {% trans "Show variants" %}
                                         </a>
                                     </div>
