--- a/src/pretix/control/templates/pretixcontrol/event/settings_base.html
+++ b/src/pretix/control/templates/pretixcontrol/event/settings_base.html
@@ -4,6 +4,42 @@
 {% block title %}{{ request.event.name }}{% endblock %}
 {% block content %}
     <h1>{% trans "Settings" %}</h1>
+    <ul class="nav nav-pills">
+        {% if request.eventperm.can_change_settings %}
+            <li {% if "event.settings" == url_name %}class="active"{% endif %}>
+                <a href="{% url 'control:event.settings' organizer=request.event.organizer.slug event=request.event.slug %}">
+                    {% trans "General" %}
+                </a>
+            </li>
+            <li {% if "event.settings.payment" == url_name %}class="active"{% endif %}>
+                <a href="{% url 'control:event.settings.payment' organizer=request.event.organizer.slug event=request.event.slug %}">
+                    {% trans "Payment" %}
+                </a>
+            </li>
+            <li {% if "event.settings.plugins" == url_name %}class="active"{% endif %}>
+                <a href="{% url 'control:event.settings.plugins' organizer=request.event.organizer.slug event=request.event.slug %}">
+                    {% trans "Plugins" %}
+                </a>
+            </li>
+            <li {% if "event.settings.tickets" == url_name %}class="active"{% endif %}>
+                <a href="{% url 'control:event.settings.tickets' organizer=request.event.organizer.slug event=request.event.slug %}">
+                    {% trans "Tickets" %}
+                </a>
+            </li>
+            <li {% if "event.settings.mail" == url_name %}class="active"{% endif %}>
+                <a href="{% url 'control:event.settings.mail' organizer=request.event.organizer.slug event=request.event.slug %}">
+                    {% trans "Email" %}
+                </a>
+            </li>
+        {% endif %}
+        {% if request.eventperm.can_change_permissions %}
+            <li {% if "event.settings.permissions" == url_name %}class="active"{% endif %}>
+                <a href="{% url 'control:event.settings.permissions' organizer=request.event.organizer.slug event=request.event.slug %}">
+                    {% trans "Permissions" %}
+                </a>
+            </li>
+        {% endif %}
+    </ul>
     {% block inside %}
     {% endblock %}
 {% endblock %}
