--- a/src/pretix/control/templates/pretixcontrol/event/settings_base.html
+++ b/src/pretix/control/templates/pretixcontrol/event/settings_base.html
@@ -31,6 +31,11 @@
                     {% trans "Email" %}
                 </a>
             </li>
+            <li {% if "event.settings.invoice" == url_name %}class="active"{% endif %}>
+                <a href="{% url 'control:event.settings.invoice' organizer=request.event.organizer.slug event=request.event.slug %}">
+                    {% trans "Invoicing" %}
+                </a>
+            </li>
         {% endif %}
         {% if request.eventperm.can_change_permissions %}
             <li {% if "event.settings.permissions" == url_name %}class="active"{% endif %}>
