--- a/src/static/pretixpresale/scss/main.scss
+++ b/src/static/pretixpresale/scss/main.scss
@@ -21,6 +21,10 @@ footer {
     .loginbox {
         padding-top: 15px;
     }
+    .event-logo {
+        max-width: 100%;
+        height: auto;
+    }
 }
 .js-only {
     display: none;
