--- a/src/pretix/control/templates/pretixcontrol/event/display.html
+++ b/src/pretix/control/templates/pretixcontrol/event/display.html
@@ -8,6 +8,7 @@
         <fieldset>
             <legend>{% trans "Display settings" %}</legend>
             {% bootstrap_field form.primary_color layout="horizontal" %}
+            {% bootstrap_field form.logo_image layout="horizontal" %}
         </fieldset>
         <div class="form-group submit-group">
             <button type="submit" class="btn btn-primary btn-save">
