Fixed typos and updated translation

--- a/src/pretix/control/templates/pretixcontrol/vouchers/base.html
+++ b/src/pretix/control/templates/pretixcontrol/vouchers/base.html
@@ -7,7 +7,7 @@
     <ul class="nav nav-pills">
         <li {% if "event.vouchers" == url_name %}class="active"{% endif %}>
             <a href="{% url 'control:event.vouchers' organizer=request.event.organizer.slug event=request.event.slug %}">
-                {% trans "All Vouchers" %}
+                {% trans "All vouchers" %}
             </a>
         </li>
         <li {% if "event.vouchers.tags" == url_name %}class="active"{% endif %}>
