--- a/src/pretix/presale/templates/pretixpresale/event/order.html
+++ b/src/pretix/presale/templates/pretixpresale/event/order.html
@@ -15,7 +15,10 @@
             {% else %}
                 <p>{% trans "We successfully received your payment. See below for details." %}</p>
             {% endif %}
-            <p>{% trans "We also sent you an email with a link to this page if you want to come back later." %}</p>
+            <p>{% blocktrans trimmed %}
+                Please bookmark or save the link to this exact page if you want to download your ticket or change
+                your details later. We also sent you an email containing the link to the address you specified.
+            {% endblocktrans %}</p>
         </div>
     {% endif %}
     <h2>
