--- a/src/pretix/control/templates/pretixcontrol/vouchers/bulk.html
+++ b/src/pretix/control/templates/pretixcontrol/vouchers/bulk.html
@@ -17,7 +17,8 @@
                                id="voucher-bulk-codes-num"
                                placeholder="{% trans "Number" %}">
                         <div class="input-group-btn">
-                            <button class="btn btn-default" type="button" id="voucher-bulk-codes-generate">
+                            <button class="btn btn-default" type="button" id="voucher-bulk-codes-generate"
+                                data-length="{{ code_length }}">
                                 {% trans "Generate random codes" %}
                             </button>
                         </div>
