Allow rich text in product descriptions
#51

--- a/src/pretix/presale/templates/pretixpresale/event/voucher.html
+++ b/src/pretix/presale/templates/pretixpresale/event/voucher.html
@@ -1,8 +1,10 @@
 {% extends "pretixpresale/event/base.html" %}
 {% load i18n %}
+{% load l10n %}
 {% load eventurl %}
 {% load eventsignal %}
 {% load thumbnail %}
+{% load markup_tags %}
 {% block title %}{% trans "Voucher redemption" %}{% endblock %}
 
 {% block content %}
@@ -34,7 +36,7 @@
                                             </a>
                                         {% endif %}
                                         <strong>{{ item.name }}</strong>
-                                        {% if item.description %}<p>{{ item.description }}</p>{% endif %}
+                                        {% if item.description %}<p>{{ item.description|localize|apply_markup:"markdown" }}</p>{% endif %}
                                     </div>
                                     <div class="col-md-2 col-xs-6 price">
                                         {% if item.min_price != item.max_price or item.free_price %}
@@ -103,7 +105,7 @@
                                     {% endif %}
                                     <strong>{{ item.name }}</strong>
                                     {% if item.description %}
-                                        <p class="description">{{ item.description }}</p>{% endif %}
+                                        <p class="description">{{ item.description|localize|apply_markup:"markdown" }}</p>{% endif %}
                                 </div>
                                 <div class="col-md-2 col-xs-6 price">
                                     {% if item.free_price %}
