--- a/src/pretix/presale/templates/pretixpresale/event/order.html
+++ b/src/pretix/presale/templates/pretixpresale/event/order.html
@@ -12,6 +12,8 @@
             <h2>{% trans "Thank you!" %}</h2>
             {% if order.status != 'p' %}
                 <p>{% trans "Your order has been placed successfully. See below for details." %}</p>
+            {% elif order.total == 0 %}
+                <p>{% trans "Your order has been processed successfully! See below for details." %}</p>
             {% else %}
                 <p>{% trans "We successfully received your payment. See below for details." %}</p>
             {% endif %}
@@ -118,7 +120,7 @@
                     </div>
                 </div>
             </div>
-        {% elif request.event.settings.invoice_generate == 'user' %}
+        {% elif can_generate_invoice %}
             <div class="col-xs-12 {% if request.event.settings.invoice_address_asked %}col-md-6{% endif %}">
                 <div class="panel panel-primary">
                     <div class="panel-heading">
@@ -139,7 +141,7 @@
             </div>
         {% endif %}
         {% if request.event.settings.invoice_address_asked %}
-            <div class="col-xs-12 {% if invoices or request.event.settings.invoice_generate == 'user' %}col-md-6{% endif %}">
+            <div class="col-xs-12 {% if invoices or can_generate_invoice %}col-md-6{% endif %}">
                 <div class="panel panel-primary">
                     <div class="panel-heading">
                         {% if order.can_modify_answers %}
