Refs #131 -- Allow to regenerate an invoice

--- a/src/pretix/control/templates/pretixcontrol/order/index.html
+++ b/src/pretix/control/templates/pretixcontrol/order/index.html
@@ -105,6 +105,15 @@
                                     <a href="{% url "control:event.invoice.download" invoice=i.pk event=request.event.slug organizer=request.event.organizer.slug %}">
                                         {% if i.is_cancellation %}{% trans "Cancellation" %}{% else %}{% trans "Invoice" %}{% endif %}
                                         {{ i.number }}</a> ({{ i.date|date:"SHORT_DATE_FORMAT" }})
+                                    {% if not i.canceled %}
+                                        <form class="form-inline helper-display-inline" method="post"
+                                                action="{% url "control:event.order.regeninvoice" event=request.event.slug organizer=request.event.organizer.slug code=order.code id=i.pk %}">
+                                            {% csrf_token %}
+                                            <button class="btn btn-default btn-xs">
+                                                {% trans "Regenerate invoice" %}
+                                            </button>
+                                        </form>
+                                    {% endif %}
                                     {% if forloop.revcounter0 > 0 %}
                                         <br/>
                                     {% endif %}
