--- a/src/pretix/presale/templates/pretixpresale/event/index.html
+++ b/src/pretix/presale/templates/pretixpresale/event/index.html
@@ -53,7 +53,7 @@
         </div>
     {% endif %}
     {% if frontpage_text %}
-        {{ frontpage_text|linebreaks }}
+        {{ frontpage_text|apply_markup:"markdown"|linebreaks }}
     {% endif %}
     {% if event.presale_is_running or event.settings.show_items_outside_presale_period %}
         <form method="post" data-asynctask
