Include comment field in OrderDetail view

--- a/src/static/pretixcontrol/scss/main.scss
+++ b/src/static/pretixcontrol/scss/main.scss
@@ -95,6 +95,9 @@ h1 .btn-sm {
 .helper-width-auto {
     width: auto;
 }
+.helper-width-100 {
+    width: 100%;
+}
 .helper-space-below {
     margin-bottom: 10px;
 }
