--- a/src/pretix/control/templates/pretixcontrol/order/index.html
+++ b/src/pretix/control/templates/pretixcontrol/order/index.html
@@ -1,5 +1,6 @@
 {% extends "pretixcontrol/event/base.html" %}
 {% load i18n %}
+{% load bootstrap3 %}
 {% load eventurl %}
 {% block title %}
     {% blocktrans trimmed with code=order.code %}
@@ -278,6 +279,25 @@
                         </div>
                     </div>
                 {% endif %}
+            </div>
+            <div class="panel panel-default items">
+                <div class="panel-heading">
+                    <h3 class="panel-title">
+                        {% trans "Internal comment" %}
+                    </h3>
+                </div>
+                <div class="panel-body">
+                    <form class="form" method="post"
+                            action="{% url "control:event.order.comment" event=request.event.slug organizer=request.event.organizer.slug code=order.code %}">
+                        {% csrf_token %}
+                        <div class="row">
+                            {% bootstrap_field comment_form.comment layout="horizontal" show_help=True show_label=False horizontal_field_class="col-md-12" %}
+                        </div>
+                        <button class="btn btn-default">
+                            {% trans "Update comment" %}
+                        </button>
+                    </form>
+                </div>
             </div>
         </div>
 
