--- a/src/static/pretixpresale/scss/_event.scss
+++ b/src/static/pretixpresale/scss/_event.scss
@@ -96,7 +96,10 @@
     color: white;
 }
 .checkout-button-row {
-    padding: 15px 0;
+    padding-top: 15px;
+}
+section.front-page {
+    margin-top: 15px;
 }
 .offline-banner {
     background: $brand-danger;
