Fix #163 -- Form to change orders

--- a/src/pretix/control/templates/pretixcontrol/event/mail.html
+++ b/src/pretix/control/templates/pretixcontrol/event/mail.html
@@ -16,6 +16,7 @@
             {% bootstrap_field form.mail_text_order_paid layout="horizontal" %}
             {% bootstrap_field form.mail_text_order_free layout="horizontal" %}
             {% bootstrap_field form.mail_text_resend_link layout="horizontal" %}
+            {% bootstrap_field form.mail_text_order_changed layout="horizontal" %}
         </fieldset>
         <fieldset>
             <legend>{% trans "SMTP settings" %}</legend>
