--- a/src/pretix/control/templates/pretixcontrol/order/index.html
+++ b/src/pretix/control/templates/pretixcontrol/order/index.html
@@ -148,6 +148,14 @@
             </div>
             <div class="panel panel-default items">
                 <div class="panel-heading">
+                    <div class="pull-right">
+                        {% if order.status == "n" and request.eventperm.can_change_orders %}
+                            <a href="{% url "control:event.order.change" event=request.event.slug organizer=request.event.organizer.slug code=order.code %}">
+                                <span class="fa fa-edit"></span>
+                                {% trans "Change products" %}
+                            </a>
+                        {% endif %}
+                    </div>
                     <h3 class="panel-title">
                         {% trans "Ordered items" %}
                     </h3>
