--- a/src/pretix/control/templates/pretixcontrol/event/invoicing.html
+++ b/src/pretix/control/templates/pretixcontrol/event/invoicing.html
@@ -10,6 +10,7 @@
             {% bootstrap_field form.invoice_address_asked layout="horizontal" %}
             {% bootstrap_field form.invoice_address_required layout="horizontal" %}
             {% bootstrap_field form.invoice_address_vatid layout="horizontal" %}
+            {% bootstrap_field form.invoice_numbers_consecutive layout="horizontal" %}
             {% bootstrap_field form.invoice_generate layout="horizontal" %}
             {% bootstrap_field form.invoice_language layout="horizontal" %}
             {% bootstrap_field form.invoice_address_from layout="horizontal" %}
