--- a/src/pretix/presale/templates/pretixpresale/event/order_modify.html
+++ b/src/pretix/presale/templates/pretixpresale/event/order_modify.html
@@ -12,6 +12,12 @@
         {% csrf_token %}
         <div class="panel-group" id="questions_accordion">
             {% if event.settings.invoice_address_asked %}
+                <div class="alert alert-info">
+                    {% blocktrans trimmed %}
+                        Modifying your invoice address will not automatically generate a new invoice.
+                        Please contact us if you need a new invoice.
+                    {% endblocktrans %}
+                </div>
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         <h4 class="panel-title">
