--- a/src/pretix/presale/templates/pretixpresale/event/index.html
+++ b/src/pretix/presale/templates/pretixpresale/event/index.html
@@ -202,7 +202,7 @@
                     {% endfor %}
                 </section>
             {% endfor %}
-            {% if event.presale_is_running %}
+            {% if event.presale_is_running and items_by_category and display_add_to_cart %}
                 <div class="row-fluid checkout-button-row">
                     <div class="col-md-4 col-md-offset-8 col-xs-12">
                         <button class="btn btn-block btn-primary btn-lg" type="submit">
