Make products/orders that are not cancellable Update Unit Tests

--- a/src/pretix/control/templates/pretixcontrol/item/index.html
+++ b/src/pretix/control/templates/pretixcontrol/item/index.html
@@ -25,6 +25,7 @@
             {% bootstrap_field form.available_until layout="horizontal" %}
             {% bootstrap_field form.require_voucher layout="horizontal" %}
             {% bootstrap_field form.hide_without_voucher layout="horizontal" %}
+            {% bootstrap_field form.allow_cancel layout="horizontal" %}
         </fieldset>
         <div class="form-group submit-group">
             <button type="submit" class="btn btn-primary btn-save">
