Use localized settings for bank_details (#176)
This is a non-destructive upgrade since LazyI18nString will return a
normal string (which is content of the settings variable up until now)
as-is.

--- a/src/pretix/plugins/banktransfer/templates/pretixplugins/banktransfer/pending.html
+++ b/src/pretix/plugins/banktransfer/templates/pretixplugins/banktransfer/pending.html
@@ -6,7 +6,7 @@
 {% endblocktrans %}</p>
 
 <address>
-    {{ settings.bank_details|linebreaksbr }}<br />
+    {{ details|linebreaksbr }}<br />
     {% trans "Amount:" %} {{ order.total|localize }} {{ request.event.currency }}<br />
     <strong>{% trans "Reference code (important):" %} {{ order.full_code }}</strong>
 </address>
