--- a/src/pretix/control/templates/pretixcontrol/event/invoicing.html
+++ b/src/pretix/control/templates/pretixcontrol/event/invoicing.html
@@ -14,7 +14,9 @@
             {% bootstrap_field form.invoice_generate layout="horizontal" %}
             {% bootstrap_field form.invoice_language layout="horizontal" %}
             {% bootstrap_field form.invoice_address_from layout="horizontal" %}
+            {% bootstrap_field form.invoice_introductory_text layout="horizontal" %}
             {% bootstrap_field form.invoice_additional_text layout="horizontal" %}
+            {% bootstrap_field form.invoice_footer_text layout="horizontal" %}
         </fieldset>
         <div class="form-group submit-group">
             <button type="submit" class="btn btn-primary btn-save">
